# sgareader

./: genksuse.sql  ksuse.txt  sgareader.cabal
src/: Main.hs  Main_Bk.txt  Main_orig.txt  Utils.hs
